motyga-rs/tui/src/bottom_pane/snapshots/motyga_tui__bottom_pane__chat_composer__tests__footer_mode_shell_command_escape_exits_empty_mode.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› Ask Motyga to do anything                                                                         "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  gpt-5.4 high fast · ~/code/motyga-1 · Context 0% used                                             "
